<package>
    <name>dwa_mobs_planner</name>
    <version>2.0.0</version>
    <description> DWA Moving Obstacle Planner
        A DWA planner modified to take moving obstacles into account.
        Created by Alireza Hekmati at Robotic Algorithms and Motion Planing 
        Laborartory (RAMP) of Simon Fraser University (SFU).
    </description>
    <author>Alireza Hekmati</author>
    <maintainer email="ahekmati@sfu.ca">Alireza Hekmati</maintainer>
    <license>BSD</license>
    <url>http://ramp.ensc.sfu.ca/</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>base_local_planner</build_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>base_local_planner</build_depend>
    <build_depend>angles</build_depend>

    <run_depend>base_local_planner</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>eigen</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>base_local_planner</run_depend>
    <run_depend>angles</run_depend>

    <export>
        <cpp cflags="-I${prefix}/include -I${prefix}/cfg/cpp" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ldwa_local_planner_moving_obs" />
        <nav_core plugin="${prefix}/blp_plugin.xml" />
    </export>

</package>


